library/src/libqpixmapcache.h

#pragma once
#ifndef SRCC_LIBQPIXMAPCACHE_H
#define SRCC_LIBQPIXMAPCACHE_H

#include <stdbool.h>
#include <stddef.h>
#include <stdint.h>

#ifdef __GNUC__
#pragma GCC diagnostic ignored "-Wdeprecated-declarations"
#endif

#include "qtlibc.h"

#ifdef __cplusplus
extern "C" {
#endif

#ifdef __cplusplus
#if defined(WORKAROUND_INNER_CLASS_DEFINITION_QPixmapCache__Key)
typedef QPixmapCache::Key QPixmapCache__Key;
#endif
#else
typedef struct QPixmap QPixmap;
typedef struct QPixmapCache QPixmapCache;
typedef struct QPixmapCache__Key QPixmapCache__Key;
#endif

QPixmapCache* QPixmapCache_new(QPixmapCache* other);
QPixmapCache* QPixmapCache_new2(QPixmapCache* other);
void QPixmapCache_CopyAssign(QPixmapCache* self, QPixmapCache* other);
void QPixmapCache_MoveAssign(QPixmapCache* self, QPixmapCache* other);
int QPixmapCache_CacheLimit();
void QPixmapCache_SetCacheLimit(int cacheLimit);
bool QPixmapCache_Find(libqt_string key, QPixmap* pixmap);
bool QPixmapCache_Find2(QPixmapCache__Key* key, QPixmap* pixmap);
bool QPixmapCache_Insert(libqt_string key, QPixmap* pixmap);
QPixmapCache__Key* QPixmapCache_InsertWithPixmap(QPixmap* pixmap);
bool QPixmapCache_Replace(QPixmapCache__Key* key, QPixmap* pixmap);
void QPixmapCache_Remove(libqt_string key);
void QPixmapCache_RemoveWithKey(QPixmapCache__Key* key);
void QPixmapCache_Clear();
void QPixmapCache_Delete(QPixmapCache* self);

QPixmapCache__Key* QPixmapCache__Key_new();
QPixmapCache__Key* QPixmapCache__Key_new2(QPixmapCache__Key* other);
bool QPixmapCache__Key_OperatorEqual(const QPixmapCache__Key* self, QPixmapCache__Key* key);
bool QPixmapCache__Key_OperatorNotEqual(const QPixmapCache__Key* self, QPixmapCache__Key* key);
void QPixmapCache__Key_OperatorAssign(QPixmapCache__Key* self, QPixmapCache__Key* other);
void QPixmapCache__Key_Swap(QPixmapCache__Key* self, QPixmapCache__Key* other);
bool QPixmapCache__Key_IsValid(const QPixmapCache__Key* self);
void QPixmapCache__Key_Delete(QPixmapCache__Key* self);

#ifdef __cplusplus
} /* extern C */
#endif

#endif